--- a/.github/actions/run-tests/action.yml
+++ b/.github/actions/run-tests/action.yml
@@ -1,27 +1,21 @@
-name: Run Tests
-description: Runs API tests using PowerShell
+name: "Run Tests"
+description: "Runs the test suite"
 inputs:
-  env-name:
+  env:
+    description: "Test environment"
     required: true
-    description: "Environment name (dev, staging, preprod, prod)"
-
+  working-directory:
+    description: "Directory of the test framework"
+    required: true
 runs:
   using: "composite"
   steps:
-    - name: Checkout test repo
-      uses: actions/checkout@v4
-      with:
-        repository: mtararujs/course-js-api-framework
-        path: tests
+    - name: Install dependencies
+      run: npm install
+      shell: cmd
+      working-directory: ${{ inputs.working-directory }}
 
-    - name: Install test dependencies
-      run: |
-        Set-Location -Path "tests"
-        npm install
-      shell: pwsh
-
-    - name: Run tests
-      run: |
-        Set-Location -Path "tests"
-        npm run greetings greetings_${{ inputs.env-name }}
-      shell: pwsh
+    - name: Execute tests
+      run: npm run greetings greetings_${{ inputs.env }}
+      shell: cmd
+      working-directory: ${{ inputs.working-directory }}
