--- a/.github/workflows/python-greetings.yml
+++ b/.github/workflows/python-greetings.yml
@@ -16,6 +16,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           repository: mtararujs/python-greetings
+          ref: main
           path: python-greetings
       
       - name: Install dependencies
@@ -24,52 +25,52 @@ jobs:
 
   deploy-to-dev:
     needs: install-pip-deps
-    uses: ./.github/actions/deploy
+    uses: ./.github/actions/deploy@main
     with:
       environment: dev
       port: 7001
 
   tests-on-dev:
     needs: deploy-to-dev
-    uses: ./.github/actions/test
+    uses: ./.github/actions/test@main
     with:
       environment: dev
 
   deploy-to-staging:
     needs: tests-on-dev
-    uses: ./.github/actions/deploy
+    uses: ./.github/actions/deploy@main
     with:
       environment: staging
       port: 7002
 
   tests-on-staging:
     needs: deploy-to-staging
-    uses: ./.github/actions/test
+    uses: ./.github/actions/test@main
     with:
       environment: staging
 
   deploy-to-preprod:
     needs: tests-on-staging
-    uses: ./.github/actions/deploy
+    uses: ./.github/actions/deploy@main
     with:
       environment: preprod
       port: 7003
 
   tests-on-preprod:
     needs: deploy-to-preprod
-    uses: ./.github/actions/test
+    uses: ./.github/actions/test@main
     with:
       environment: preprod
 
   deploy-to-prod:
     needs: tests-on-preprod
-    uses: ./.github/actions/deploy
+    uses: ./.github/actions/deploy@main
     with:
       environment: prod
       port: 7004
 
   tests-on-prod:
     needs: deploy-to-prod
-    uses: ./.github/actions/test
+    uses: ./.github/actions/test@main
     with:
       environment: prod
