--- a/.github/workflows/python-greetings.yml
+++ b/.github/workflows/python-greetings.yml
@@ -27,7 +27,10 @@ jobs:
     needs: install-pip-deps
     runs-on: self-hosted
     steps:
-      - name: Run Deploy Action
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Deploy to Dev
         uses: ./.github/actions/deploy
         with:
           environment: dev
@@ -37,7 +40,10 @@ jobs:
     needs: deploy-to-dev
     runs-on: self-hosted
     steps:
-      - name: Run Test Action
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Run Tests on Dev
         uses: ./.github/actions/test
         with:
           environment: dev
@@ -46,7 +52,10 @@ jobs:
     needs: tests-on-dev
     runs-on: self-hosted
     steps:
-      - name: Run Deploy Action
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Deploy to Staging
         uses: ./.github/actions/deploy
         with:
           environment: staging
@@ -56,7 +65,10 @@ jobs:
     needs: deploy-to-staging
     runs-on: self-hosted
     steps:
-      - name: Run Test Action
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Run Tests on Staging
         uses: ./.github/actions/test
         with:
           environment: staging
@@ -65,7 +77,10 @@ jobs:
     needs: tests-on-staging
     runs-on: self-hosted
     steps:
-      - name: Run Deploy Action
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Deploy to Preprod
         uses: ./.github/actions/deploy
         with:
           environment: preprod
@@ -75,7 +90,10 @@ jobs:
     needs: deploy-to-preprod
     runs-on: self-hosted
     steps:
-      - name: Run Test Action
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Run Tests on Preprod
         uses: ./.github/actions/test
         with:
           environment: preprod
@@ -84,7 +102,10 @@ jobs:
     needs: tests-on-preprod
     runs-on: self-hosted
     steps:
-      - name: Run Deploy Action
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Deploy to Prod
         uses: ./.github/actions/deploy
         with:
           environment: prod
@@ -94,7 +115,10 @@ jobs:
     needs: deploy-to-prod
     runs-on: self-hosted
     steps:
-      - name: Run Test Action
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Run Tests on Prod
         uses: ./.github/actions/test
         with:
           environment: prod
