--- a/.github/workflows/python-greetings.yml
+++ b/.github/workflows/python-greetings.yml
@@ -20,8 +20,9 @@ jobs:
           path: python-greetings
       
       - name: Install dependencies
-        run: pip3 install -r requirements.txt
+        run: pip install -r requirements.txt
         working-directory: python-greetings
+        shell: cmd
 
   deploy-to-dev:
     needs: install-pip-deps
