--- a/.github/workflows/python-greetings.yml
+++ b/.github/workflows/python-greetings.yml
@@ -11,6 +11,9 @@ on:
 jobs:
   install-pip-deps:
     runs-on: self-hosted
+    defaults:
+      run:
+        shell: cmd
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -20,71 +23,85 @@ jobs:
           python-version: '3.x'
       - name: Check Python Version
         run: python --version
-        shell: cmd
       - name: Install dependencies
         run: python -m pip install --upgrade pip && python -m pip install -r requirements.txt
-        shell: cmd
 
   deploy-to-dev:
     needs: install-pip-deps
     runs-on: self-hosted
+    defaults:
+      run:
+        shell: cmd
     steps:
       - name: Deploy to Dev
         run: echo Deploying to dev on port 7001
-        shell: cmd
 
   tests-on-dev:
     needs: deploy-to-dev
     runs-on: self-hosted
+    defaults:
+      run:
+        shell: cmd
     steps:
       - name: Run tests on Dev
         run: echo Running tests on dev
-        shell: cmd
 
   deploy-to-staging:
     needs: tests-on-dev
     runs-on: self-hosted
+    defaults:
+      run:
+        shell: cmd
     steps:
       - name: Deploy to Staging
         run: echo Deploying to staging on port 7002
-        shell: cmd
 
   tests-on-staging:
     needs: deploy-to-staging
     runs-on: self-hosted
+    defaults:
+      run:
+        shell: cmd
     steps:
       - name: Run tests on Staging
         run: echo Running tests on staging
-        shell: cmd
 
   deploy-to-preprod:
     needs: tests-on-staging
     runs-on: self-hosted
+    defaults:
+      run:
+        shell: cmd
     steps:
       - name: Deploy to Preprod
         run: echo Deploying to preprod on port 7003
-        shell: cmd
 
   tests-on-preprod:
     needs: deploy-to-preprod
     runs-on: self-hosted
+    defaults:
+      run:
+        shell: cmd
     steps:
       - name: Run tests on Preprod
         run: echo Running tests on preprod
-        shell: cmd
 
   deploy-to-prod:
     needs: tests-on-preprod
     runs-on: self-hosted
+    defaults:
+      run:
+        shell: cmd
     steps:
       - name: Deploy to Prod
         run: echo Deploying to prod on port 7004
-        shell: cmd
 
   tests-on-prod:
     needs: deploy-to-prod
     runs-on: self-hosted
+    defaults:
+      run:
+        shell: cmd
     steps:
       - name: Run tests on Prod
         run: echo Running tests on prod
-        shell: cmd
